# mfix

./: .gitignore  CMakeLists.txt  README.md  make.sh  makecuda.sh  makempi.sh
src/: CMakeLists.txt  Make.mfix  main.cpp  mfix.H  mfix.cpp
src/chem/: CMakeLists.txt  Make.package  mfix_actual_rhs.H  mfix_calc_particles_within_cells.cpp  mfix_chem_data_structs.H  mfix_chem_memory_handler.H  mfix_chem_memory_structs.H  mfix_cmi.H  mfix_cmi.cpp  mfix_integrator.H  mfix_material_interface.H
src/convection/: CMakeLists.txt  mfix_compute_MAC_projected_velocities.cpp  mfix_compute_convective_term.cpp  mfix_compute_forces.cpp  mfix_correct_small_cells.cpp  mfix_set_mac_velocity_bcs.cpp
src/des/: CMakeLists.txt  Make.package  mfix_des_K.H  mfix_des_roll_friction_K.H  mfix_pc.H  mfix_pc.cpp  mfix_pc_impose_mean.cpp  mfix_pc_inflow.cpp  mfix_pc_remove_out_of_range.cpp  mfix_pc_replicate.cpp  mfix_pc_updates_K.H
src/diffusion/: CMakeLists.txt  Make.package  mfix_diffop_energy.cpp  mfix_diffop_scalar.cpp  mfix_diffop_species.cpp  mfix_diffop_tracer.cpp  mfix_diffop_velocity.cpp  mfix_diffop_velocity_K.H  mfix_diffusion_op.H  mfix_diffusion_op.cpp
src/eb/: CMakeLists.txt  Make.package  mfix_eb.H  mfix_eb.cpp  mfix_eb_box.cpp  mfix_eb_csg.cpp  mfix_eb_cylinder.cpp  mfix_eb_generic.cpp  mfix_eb_hopper.cpp  mfix_eb_regular.cpp  mfix_eb_stl.cpp  mfix_write_eb_surface.cpp
src/fluid/: CMakeLists.txt  Make.package  mfix_fluid_update.H  mfix_fluid_update.cpp  mfix_fluid_update_density.cpp  mfix_fluid_update_energy.cpp  mfix_fluid_update_species.cpp  mfix_fluid_update_tracers.cpp  mfix_fluid_update_velocity.cpp  mfix_leveldata.H  mfix_leveldata.cpp  mfix_stepdata.H  mfix_stepdata.cpp
src/io/: CMakeLists.txt  Make.package  mfix_ascent.cpp  mfix_build_info.cpp  mfix_catalyst.cpp  mfix_chk.cpp  mfix_compute_vorticity.cpp  mfix_io.cpp  mfix_monitors.H  mfix_monitors.cpp  mfix_mpmd.cpp  mfix_plt.cpp  mfix_rw.H  mfix_rw.cpp
src/prob/: CMakeLists.txt  Make.package  mfix_avg_pc_parms.H  mfix_avg_pc_parms.cpp  mfix_bc.H  mfix_bc.cpp  mfix_dem.H  mfix_dem.cpp  mfix_eb_parms.H  mfix_fix_inputs.H  mfix_fluid.H  mfix_fluid.cpp  mfix_fluid_var.H  mfix_ic.H  mfix_ic.cpp  mfix_load_balance.H  mfix_load_balance.cpp  mfix_pic.H  mfix_pic.cpp  mfix_porous_media.H  mfix_porous_media.cpp  mfix_prop_molecular_viscosity.H  mfix_prop_molecular_viscosity.cpp  mfix_prop_molecular_weight.H  mfix_prop_molecular_weight.cpp  mfix_prop_specific_heat.H  mfix_prop_specific_heat.cpp  mfix_properties.H  mfix_properties.cpp  mfix_reactions.H  mfix_reactions.cpp  mfix_regions.cpp  mfix_solids.H  mfix_solids.cpp  mfix_species.H  mfix_species.cpp  mfix_tag.H  mfix_tag.cpp  mfix_timer.H  mfix_timer.cpp
src/projection/: CMakeLists.txt  Make.package  mfix_apply_nodal_projection.cpp  mfix_constraints.cpp  mfix_proj_redistribution.cpp
src/regrid/: CMakeLists.txt  Make.package  mfix_error_est.cpp  mfix_regrid.cpp
src/setup/: CMakeLists.txt  Make.package  mfix_init.cpp  mfix_init_fluid.H  mfix_init_fluid.cpp  mfix_init_redistribution.cpp  mfix_restart.H  mfix_restart.cpp  mfix_set_gp0.cpp
src/timestepping/: CMakeLists.txt  Make.package  mfix_apply_corrector.cpp  mfix_apply_predictor.cpp  mfix_compute_dt.cpp  mfix_deposit_to_grid.cpp  mfix_evolve.cpp  mfix_evolve_Godunov.cpp  mfix_evolve_MOL.cpp  mfix_evolve_fluid.cpp  mfix_evolve_solids.cpp  mfix_evolve_steady_state.cpp  mfix_fluid_implicit_updates.cpp  mfix_fluid_startup.cpp
subprojects/csg-eb/: .gitlab-ci.yml  CMakeLists.txt  Dockerfile  GNUmakefile  README.md
subprojects/csg-eb/.spack/repo/: repo.yaml
subprojects/csg-eb/include/: csg.hpp  csg_exception.hpp  csg_types.hpp
subprojects/csg-eb/src/: csg_cgal_helper.hpp  csg_matrix_functions.hpp
subprojects/csg-eb/src/csg/: CMakeLists.txt  cgal_helper_polygon.cpp  cgal_helper_polyhedron.cpp  csg.cpp  exception.cpp  levelset_2d.cpp  levelset_3d.cpp  matrix_functions.cpp  parser.cpp
subprojects/csg-eb/src/csg/tests/: CMakeLists.txt
subprojects/csg-eb/src/csg/tests/levelset/: boolean.t.cpp  empty.t.cpp  extrude.t.cpp  hull.t.cpp  internal_flow.t.cpp  primitives.t.cpp  transform.t.cpp
subprojects/csg-eb/src/csg/tests/parser/: boolean.t.cpp  empty.t.cpp  extrude.t.cpp  hull.t.cpp  nest.cpp  other.t.cpp  primitives.t.cpp  transform.t.cpp
tests/: CMakeLists.txt  MFIX-tests-CPU.ini  MFIX-tests-CUDA.ini
unit-tests/: CMakeLists.txt
unit-tests/chemistry/: CMakeLists.txt  GNUmakefile  inputs.adiabatic-flame  inputs.eulerian.01  inputs.eulerian.02  inputs.het.01  inputs.het.02  inputs.het.03  inputs.wetbulb  results_analysis.ipynb
unit-tests/chemistry/source/: CMakeLists.txt  Make.chem  Make.package  chem_test.H  chem_test.cpp  chem_test_check.H  chem_test_check.cpp  chem_test_check_eulerian01.cpp  chem_test_prob.H  chem_test_prob.cpp  main.cpp  mfix_usr_reactions_rates_K.H
unit-tests/dem/oblique/: CMakeLists.txt  GNUmakefile  inputs
unit-tests/dem/oblique/source/: CMakeLists.txt  Make.dem  Make.package  dem_test.H  dem_test.cpp  dem_test_check.H  dem_test_check.cpp  dem_test_eb.H  dem_test_eb.cpp  dem_test_prob.H  dem_test_prob.cpp  main.cpp
unit-tests/distributions/: CMakeLists.txt  GNUmakefile
unit-tests/distributions/source/: CMakeLists.txt  Make.dist  Make.package  main.cpp  test_constant_dist.H  test_constant_dist.cpp  test_custom_dist.H  test_custom_dist.cpp  test_dist.H  test_dist.cpp  test_log_normal_dist.H  test_log_normal_dist.cpp  test_normal_dist.H  test_normal_dist.cpp  test_uniform_dist.H  test_uniform_dist.cpp
unit-tests/mfix_fluid/: CMakeLists.txt  GNUmakefile
unit-tests/mfix_fluid/source/: CMakeLists.txt  Make.mfix_fluid  Make.package  main.cpp  test_fluid_eddy_viscosity.H  test_fluid_eddy_viscosity.cpp  test_fluid_incompressible.H  test_fluid_incompressible.cpp  test_fluid_molecular_viscosity.H  test_fluid_molecular_viscosity.cpp  test_fluid_porous_media.H  test_fluid_porous_media.cpp  test_fluid_suspension_viscosity.H  test_fluid_suspension_viscosity.cpp
unit-tests/mfix_fluid_var/: CMakeLists.txt  GNUmakefile
unit-tests/mfix_fluid_var/source/: Make.fluid_var  main.cpp
(+862 files in other folders)
